--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,10 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+        </dependency>
     </dependencies>
 </project>
